Fullscreen mode, temple road, and movement restriction for Lakhe Chase game

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 <body>
   <h1>Lakhe Chase</h1>
   <div id="game-container">
-    <canvas id="gameCanvas" width="600" height="400"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <div id="score">Time: 0s</div>
     <div id="game-over" style="display:none;"></div>
   </div>
   <script src="game.js"></script>
+  <script>
+    // Make canvas fullscreen
+    function resizeCanvas() {
+      const canvas = document.getElementById('gameCanvas');
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+  </script>
 </body>
 </html>
